<resources>
    <string name="app_name">FPGIns</string>
    <string name="version">RD.V.1.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Macky Sevidal</string>
    <string name="nav_header_subtitle">msevidal@fpgins.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_messages">Messages</string>
    <string name="fpg_assist">FPG Assist</string>
    <string name="claims_records">Claims Records</string>
    <string name="main_claims">Claims</string>
    <string name="settings">Settings</string>
    <string name="shop">Shop</string>
    <string name="partners">Partners</string>
    <string name="products">Products</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="dashboard">Dashboard</string>
    <string name="claim_drafts">Claims Drafts</string>
    <string name="contact_us">Contact Us</string>
    <string name="help_and_support">Help &amp; Support</string>
    <string name="news_and_events">News &amp; Events</string>
    <string name="Faq">Faq</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="need_help">NEED HELP?</string>
    <string name="password_error">This password is too short</string>
    <string name="email_empty">This field is required</string>
    <string name="email_error">This email is not valid</string>
    <string name="client">Client</string>
    <string name="agent">Agent</string>
    <string name="choose_account_type">Choose Account Type</string>
    <string name="detail_choose">You need to choose from the two options</string>
    <string name="mainmenu_overview">Overview</string>
    <string name="mainmenu_products">Products</string>
    <string name="mainmenu_transaction">Transactions</string>
    <string name="mainmenu_customercare">Customer Care</string>
    <string name="logout">Logout</string>
    <string name="title_1">Management Overview</string>
    <string name="title_2">Production</string>
    <string name="title_3">Losses</string>
    <string name="report_period">Report Period: \t</string>
    <string name="losses">Losses</string>
    <string name="production">Production</string>
    <string name="loss_ratio">Loss Ratio</string>
    <string name="income">Income</string>
    <string name="my_profile">My Profile</string>
    <string name="personal_info">Personal Information</string>
    <string name="policy_details">Policy Details</string>
    <string name="motor">Motor</string>
    <string name="personal_accident">Personal Accident</string>
    <string name="corporate">Corporate</string>
    <string name="home">Home</string>
    <string name="transaction_history">Transaction History</string>
    <string name="travel">Travel</string>
    <string name="agent_details">Agent Details</string>
    <string name="app_setting">App Settings</string>
    <string name="touch_id">Touch ID</string>
    <string name="notification">Notification</string>
    <string name="share">Share</string>
    <string name="primary_email">Primary Email</string>
    <string name="assured_id">Assured ID</string>
    <string name="policy_list">Policy List</string>
    <string name="mobile">Mobile</string>
    <string name="home_number">Home Number</string>
    <string name="office">Office Number</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="change_password">Change Password</string>
    <string name="logout_sure">Are you sure you want to logout?</string>
    <string name="profile_picture_updated">Profile picture updated</string>
    <string name="branch_locator">Branch Locator</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="cc_definition">Got a question? We\'d love to hear from you. Send us a message and we\'ll respond as soon as possible.</string>
    <string name="cc_headoffice">Head Office</string>
    <string name="cc_contact_info">6/F Zuellig Buiding,\nMakati Avenue corner Paseo de Roxas,\nMakati City, 1225 Philippines\nTel. : (+632) 8859 1200 / \n(+632) 7944 1300 \nFax. : (+632) 8811 5108\nEmail : phcustomercare@fpgins.com </string>
    <string name="menu_home">Overview</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_customer_care">Customer Care</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_welcome_note">WelcomeNote</string>
    <string name="submit">Submit</string>
    <string name="save_as_draft">Save As Draft</string>
    <string name="create_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="update_password">Update</string>
    <string name="account_registration">Account Registration</string>
    <string name="client_registration">Client Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Full Name</string>
    <string name="client_name">Client Name</string>
    <string name="birthday">Birthday</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="email">Email</string>
    <string name="client_id">Client ID</string>
    <string name="contact">Contact Number</string>
    <string name="password_hint">Password</string>
    <string name="retype_password">Re-type Password</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="verification">Two-way verification</string>
    <string name="help">To help keep your account secure, complete the task below</string>
    <string name="enter_verification">Enter verification code</string>
    <string name="email_sent">An email with a verification code has sent to </string>
    <string name="verify_button">Verify Account</string>
    <string name="type_error">Type is needed</string>
    <string name="resend">Resend verification code</string>
    <string name="frequently_asked_question">Frequently asked question</string>
    <string name="app_changed">I notice that the app has been updated.\nWhy the change?</string>
    <string name="whats_new">What\'s New?</string>
    <string name="get_in_touch">Get in touch</string>
    <string name="for_general_inquiries">For general inquiries, \nyou may call our Head offices daily at: </string>
    <string name="indonesia">Indonesia</string>
    <string name="philippines">Philippines</string>
    <string name="thailand">Thailand</string>
    <string name="after_successful_activating">After successful activating my account,\nCan I use it immediately?</string>
    <string name="fields_error">4 numbers are needed to verifiy the account</string>
    <string name="policy">Policy</string>
    <string name="vehicle">Vehicle</string>
    <string name="policy_number">Policy Number</string>
    <string name="claim_number">Claim Number</string>
    <string name="plate_number">Plate No</string>
    <string name="conduction_sticker">Conduction Sticker</string>
    <string name="address">Address</string>
    <string name="Remarks">Remarks</string>
    <string name="submitted_forms">Submitted Forms</string>
    <string name="submitted_forms_information">Submitted Forms Information</string>
    <string name="claim_no">Claim Number</string>
    <string name="date_submitted">Date Submitted</string>
    <string name="form_information">Form Information</string>
    <string name="information">Information</string>
    <string name="status">Status</string>
    <string name="messaging">Messaging</string>
    <string name="before_submit_msg">Please verify your details before you submit.</string>
    <string name="before_submit_detail">After submitting, all information are not going to be modified and then processed by an FPG representative.</string>
    <string name="name">Name</string>
    <string name="form_status">Form Status</string>
    <string name="date">Date Filed</string>
    <string name="policy_no_text">Policy Number</string>
    <string name="claim_no_text">Claim Number</string>
    <string name="plate_no">Plate Number</string>
    <string name="mobile_no_text">Mobile Number</string>
    <string name="conduction_no">Conduction Number</string>
    <string name="location">Location</string>
    <string name="remarks">Remarks</string>
    <string name="no_records_found">No Records Found</string>
    <string name="detail">Account validated.</string>
    <string name="detail2">You can now change your password</string>
    <string name="Password_requirements">Password Requirements:</string>
    <string name="CreatePasswordHint">Your password must have:</string>
    <string name="show_password">Show Password</string>
    <string name="required">This field is required</string>
    <string name="password_length">Your password should have at least 8 characters</string>
    <string name="password_capital_letter">Your password should have at least 1 capital letter</string>
    <string name="password_small_letter">Your password should have at least 1 small case letter</string>
    <string name="password_number">Your password should have at least 1 number</string>
    <string name="password_unmatched">Passwords do not match.</string>
    <string name="password_unsuccessful">Invalid old password</string>
    <string name="fields_necessary">Please fill-up necessary fields</string>
    <string name="one_upper">One upper character</string>
    <string name="one_lower">One lower character</string>
    <string name="one_num">At least one number</string>
    <string name="eight_char">8 or more characters</string>
    <string name="no_space">No spaces</string>
    <string name="no_internet_conn">No Internet Connection</string>
    <string name="upload_complete">Upload Completed</string>
    <string name="successfully_sent">Successfully Sent</string>
    <string name="successfully_sent_msg">You have successfully sent your details for claim</string>
    <string name="successfully_sent_detail">FPG representative will get in touch with you shortly.</string>
    <string name="ok">Ok</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="save">Save</string>
    <string name="internet_connection_error">No Internet Connection</string>
    <string name="internet_connection_detail">Please check your internet connection.</string>
</resources>