<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/horizontal_default_padding"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_backbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/page_default_margin_horizontal"
                    android:paddingVertical="@dimen/page_default_margin_horizontal"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_action_back" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_password"
                    android:textStyle="bold"
                    android:textSize="@dimen/head_textsize"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/fpg_gray">

                </TextView>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_stringOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textAlignment="center"
                android:textColor="@color/fpg_gray"
                android:textSize="@dimen/head_textsize"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_stringTwo"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail2"
                android:textAlignment="center"
                android:textColor="@color/fpg_gray"
                android:textSize="@dimen/setting_title"
                android:textStyle="normal"/>

            <EditText
                android:id="@+id/etPw"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/current_password"
                android:layout_marginTop="@dimen/edittext_spacing"
                android:focusableInTouchMode="true"
                android:background="@drawable/edittext_background"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:visibility="gone"
                android:scrollHorizontally="true"
                android:textSize="@dimen/edittext_textsize" />


            <EditText
                android:id="@+id/etNewPw"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:layout_marginTop="@dimen/edittext_spacing"
                android:focusableInTouchMode="true"
                android:background="@drawable/edittext_background"
                android:imeOptions="actionNext"
                android:drawableRight="@drawable/ic_action_slashedeye"
                android:inputType="textPassword"
                android:scrollHorizontally="true"
                android:textSize="@dimen/edittext_textsize" />

            <EditText
                android:id="@+id/etRetypePw"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/retype_password"
                android:focusableInTouchMode="true"
                android:background="@drawable/edittext_background"
                android:layout_marginTop="@dimen/edittext_spacing"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:drawableRight="@drawable/ic_action_slashedeye"
                android:scrollHorizontally="true"
                android:textSize="@dimen/edittext_textsize" />

            <TextView
                android:id="@+id/tvErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:textSize="@dimen/textview_error_textsize"
                android:textColor="@color/dark_red"
                android:visibility="invisible" />

            <!--            <CheckBox-->
            <!--                android:id="@+id/checkBox"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="right"-->
            <!--                android:layout_marginTop="@dimen/edittext_spacing"-->
            <!--                android:textSize="@dimen/button_textsize"-->
            <!--                android:text="@string/show_password"-->
            <!--                android:textColor="@color/black" />-->

            <TextView
                android:id="@+id/HintPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Password_requirements"
                android:textColor="@color/fpg_gray"
                android:textSize="@dimen/button_textsize"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/spacing_of_editext"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/relative_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/checkmark1"
                        android:layout_width="20dp"
                        android:layout_height="22dp"
                        android:layout_weight="1"
                        android:layout_marginBottom="5dp"
                        android:gravity="center_vertical"
                        android:src="@drawable/gray_check"/>

                    <TextView
                        android:id="@+id/upperCase"
                        android:layout_width="wrap_content"
                        android:layout_toRightOf="@id/checkmark1"
                        android:layout_height="22dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="6dp"
                        android:gravity="center_vertical"
                        android:text="@string/one_upper"
                        android:textColor="@color/fpg_gray"
                        android:textSize="@dimen/textview_error_textsize" />

                    <ImageView
                        android:id="@+id/checkmark2"
                        android:layout_width="20dp"
                        android:layout_height="22dp"
                        android:layout_marginBottom="5dp"
                        android:layout_below="@id/checkmark1"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:src="@drawable/gray_check"/>

                    <TextView
                        android:id="@+id/lowerCase"
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="6dp"
                        android:layout_below="@id/upperCase"
                        android:layout_toRightOf="@id/checkmark2"
                        android:textColor="@color/fpg_gray"
                        android:gravity="center_vertical"
                        android:text="@string/one_lower"
                        android:textSize="@dimen/textview_error_textsize" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/password_requirements_spacing">

                    <ImageView
                        android:id="@+id/checkmark3"
                        android:layout_width="20dp"
                        android:layout_height="22dp"
                        android:layout_marginBottom="7dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:src="@drawable/gray_check"/>

                    <TextView
                        android:id="@+id/oneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="6dp"
                        android:layout_toRightOf="@id/checkmark3"
                        android:textColor="@color/fpg_gray"
                        android:gravity="center_vertical"
                        android:text="@string/one_num"
                        android:textSize="@dimen/textview_error_textsize" />

                    <ImageView
                        android:id="@+id/checkmark4"
                        android:layout_width="20dp"
                        android:layout_height="22dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:layout_below="@id/checkmark3"
                        android:gravity="center_vertical"
                        android:src="@drawable/gray_check"/>

                    <TextView
                        android:id="@+id/eightChar"
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_marginStart="10dp"
                        android:layout_below="@id/oneNumber"
                        android:layout_toRightOf="@id/checkmark4"
                        android:layout_marginBottom="6dp"
                        android:textColor="@color/fpg_gray"
                        android:gravity="center_vertical"
                        android:text="@string/eight_char"
                        android:textSize="@dimen/textview_error_textsize" />
                </RelativeLayout>


            </LinearLayout>


            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:id="@+id/btnUpdatePassword"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/edittext_spacing"
                android:background="@drawable/login_button"
                android:text="@string/update_password"
                android:textColor="@color/white"
                android:textSize="@dimen/button_textsize"/>


        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>