<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/linearMain"
    android:layout_marginHorizontal="@dimen/page_default_margin_horizontal"
    android:layout_marginVertical="3dp"
    android:background="@color/background_white"
    android:paddingHorizontal="20dp"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/page_default_margin_horizontal"
            android:paddingVertical="@dimen/edittext_spacing"
            android:weightSum="2">

        <TextView
            android:id="@+id/txt_claimNumber"
            android:hint="@string/claim_no"
            android:textColor="@color/black"
            android:textSize="@dimen/head_title_textsize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_weight="1.8"/>

        <ImageView
            android:id="@+id/img_status"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/status_active"
            android:layout_weight=".2"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_policyNumber"
            android:hint="@string/policy_number"
            android:textColor="@color/fpg_gray"
            android:textSize="@dimen/edittext_textsize"
            android:paddingHorizontal="@dimen/page_default_margin_horizontal"
            android:paddingBottom="@dimen/edittext_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_dateSubmitted"
            android:hint="@string/date_submitted"
            android:textColor="@color/fpg_gray"
            android:textSize="@dimen/textview_error_textsize"
            android:paddingHorizontal="@dimen/page_default_margin_horizontal"
            android:paddingBottom="@dimen/edittext_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</androidx.cardview.widget.CardView>